# nit

./: .gitignore  .nit.json5  .nit_local.json5  Cargo.toml  README.md  build_and_run_local_linters.nu
.github/workflows/: build.yml  build_lints.yml
lints/: README.md
lints/lint_case_conflict/: Cargo.toml  README.md
lints/lint_case_conflict/src/: main.rs
lints/lint_deny/: Cargo.toml  README.md  metadata.json
lints/lint_deny/src/: main.rs
lints/lint_executable_shebang/: Cargo.toml  README.md
lints/lint_executable_shebang/src/: main.rs
lints/lint_json_format/: Cargo.toml  README.md  metadata.json
lints/lint_json_format/src/: jsonformat.rs  main.rs
lints/lint_merge_conflicts/: Cargo.toml
lints/lint_merge_conflicts/src/: main.rs
lints/lint_regex/: Cargo.toml  README.md  metadata.json
lints/lint_regex/src/: main.rs
lints/lint_tabs/: Cargo.toml  README.md
lints/lint_tabs/src/: main.rs
lints/lint_whitespace/: Cargo.toml  README.md  metadata.json
lints/lint_whitespace/src/: main.rs
src/: bash_paths.rs  config.rs  engine.rs  fetch.rs  file_matching.rs  git.rs  hash_adapter.rs  leb128.rs  main.rs  metadata.rs  serde_glob.rs  serde_regex.rs  unique_filename.rs  wasi_cache.rs  wasm.rs
test_files/: test.py
